--- a/assets/Languages/en-US.xlf
+++ b/assets/Languages/en-US.xlf
@@ -2895,262 +2895,402 @@
 					</trans-unit>
 				</group>
 			</group>
-			<group id="motor_sound_editor">
-				<group id="menu_file">
-					<trans-unit id="file">
-						<source>File</source>
-					</trans-unit>
-					<trans-unit id="new">
-						<source>New</source>
-					</trans-unit>
-					<trans-unit id="open">
-						<source>Open...</source>
-					</trans-unit>
-					<trans-unit id="save">
-						<source>Save</source>
-					</trans-unit>
-					<trans-unit id="save_as">
-						<source>Save as...</source>
-					</trans-unit>
-					<trans-unit id="exit">
-						<source>Exit</source>
-					</trans-unit>
-				</group>
-				<group id="menu_edit">
-					<trans-unit id="edit">
-						<source>Edit</source>
-					</trans-unit>
-					<trans-unit id="undo">
-						<source>Undo</source>
-					</trans-unit>
-					<trans-unit id="redo">
-						<source>Redo</source>
-					</trans-unit>
-					<trans-unit id="cut">
-						<source>Cut</source>
-					</trans-unit>
-					<trans-unit id="copy">
-						<source>Copy</source>
-					</trans-unit>
-					<trans-unit id="paste">
-						<source>Paste</source>
-					</trans-unit>
-					<trans-unit id="cleanup">
-						<source>Cleanup</source>
-					</trans-unit>
-					<trans-unit id="delete">
-						<source>Delete</source>
-					</trans-unit>
-				</group>
-				<group id="menu_view">
-					<trans-unit id="view">
-						<source>View</source>
-					</trans-unit>
-					<trans-unit id="power">
-						<source>Power</source>
-					</trans-unit>
-					<trans-unit id="brake">
-						<source>Brake</source>
-					</trans-unit>
-					<trans-unit id="track">
-						<source>Track</source>
-					</trans-unit>
-				</group>
-				<group id="menu_input">
-					<trans-unit id="input">
-						<source>Input</source>
-					</trans-unit>
-					<trans-unit id="pitch">
-						<source>Pitch</source>
-					</trans-unit>
-					<trans-unit id="volume">
-						<source>Volume</source>
-					</trans-unit>
-					<trans-unit id="sound_index">
-						<source>Sound source index</source>
-					</trans-unit>
-					<trans-unit id="sound_index_none">
-						<source>None</source>
-					</trans-unit>
-				</group>
-				<group id="menu_tool">
-					<trans-unit id="tool">
-						<source>Tool</source>
-					</trans-unit>
-					<trans-unit id="select">
-						<source>Select</source>
-					</trans-unit>
-					<trans-unit id="move">
-						<source>Move</source>
-					</trans-unit>
-					<trans-unit id="dot">
-						<source>Dot</source>
-					</trans-unit>
-					<trans-unit id="line">
-						<source>Line</source>
-					</trans-unit>
-				</group>
-				<group id="view_setting">
-					<trans-unit id="view_setting">
-						<source>View setting</source>
-					</trans-unit>
-					<trans-unit id="min_velocity">
-						<source>x-min(Velocity):</source>
-					</trans-unit>
-					<trans-unit id="max_velocity">
-						<source>x-max(Velocity):</source>
-					</trans-unit>
-					<trans-unit id="min_pitch">
-						<source>y-min(Pitch):</source>
-					</trans-unit>
-					<trans-unit id="max_pitch">
-						<source>y-max(Pitch):</source>
-					</trans-unit>
-					<trans-unit id="min_volume">
-						<source>y-min(Volume):</source>
-					</trans-unit>
-					<trans-unit id="max_volume">
-						<source>y-max(Volume):</source>
-					</trans-unit>
-					<trans-unit id="zoom_in">
-						<source>Zoom In</source>
-					</trans-unit>
-					<trans-unit id="zoom_out">
-						<source>Zoom Out</source>
-					</trans-unit>
-					<trans-unit id="reset">
-						<source>Reset</source>
+			<group id="sound_editor">
+				<group id="menu">
+					<group id="file">
+						<trans-unit id="name">
+							<source>File</source>
+						</trans-unit>
+						<trans-unit id="new">
+							<source>New</source>
+						</trans-unit>
+						<trans-unit id="open">
+							<source>Open...</source>
+						</trans-unit>
+						<trans-unit id="save">
+							<source>Save</source>
+						</trans-unit>
+						<trans-unit id="save_as">
+							<source>Save as...</source>
+						</trans-unit>
+						<trans-unit id="exit">
+							<source>Exit</source>
+						</trans-unit>
+					</group>
+					<group id="edit">
+						<trans-unit id="name">
+							<source>Edit</source>
+						</trans-unit>
+						<trans-unit id="undo">
+							<source>Undo</source>
+						</trans-unit>
+						<trans-unit id="redo">
+							<source>Redo</source>
+						</trans-unit>
+						<trans-unit id="cut">
+							<source>Cut</source>
+						</trans-unit>
+						<trans-unit id="copy">
+							<source>Copy</source>
+						</trans-unit>
+						<trans-unit id="paste">
+							<source>Paste</source>
+						</trans-unit>
+						<trans-unit id="cleanup">
+							<source>Cleanup</source>
+						</trans-unit>
+						<trans-unit id="delete">
+							<source>Delete</source>
+						</trans-unit>
+					</group>
+					<group id="view">
+						<trans-unit id="name">
+							<source>View</source>
+						</trans-unit>
+						<trans-unit id="power">
+							<source>Power</source>
+						</trans-unit>
+						<trans-unit id="brake">
+							<source>Brake</source>
+						</trans-unit>
+						<trans-unit id="track">
+							<source>Track</source>
+						</trans-unit>
+					</group>
+					<group id="input">
+						<trans-unit id="name">
+							<source>Input</source>
+						</trans-unit>
+						<trans-unit id="pitch">
+							<source>Pitch</source>
+						</trans-unit>
+						<trans-unit id="volume">
+							<source>Volume</source>
+						</trans-unit>
+						<trans-unit id="sound_index">
+							<source>Sound source index</source>
+						</trans-unit>
+						<trans-unit id="sound_index_none">
+							<source>None</source>
+						</trans-unit>
+					</group>
+					<group id="tool">
+						<trans-unit id="name">
+							<source>Tool</source>
+						</trans-unit>
+						<trans-unit id="select">
+							<source>Select</source>
+						</trans-unit>
+						<trans-unit id="move">
+							<source>Move</source>
+						</trans-unit>
+						<trans-unit id="dot">
+							<source>Dot</source>
+						</trans-unit>
+						<trans-unit id="line">
+							<source>Line</source>
+						</trans-unit>
+					</group>
+					<trans-unit id="language">
+						<source>language</source>
 					</trans-unit>
 				</group>
-				<group id="direct_input">
-					<trans-unit id="direct_input">
-						<source>Direct input</source>
+				<group id="sound_cfg">
+					<trans-unit id="name">
+						<source>Sound Settings</source>
 					</trans-unit>
-					<trans-unit id="x_coordinate">
-						<source>x coordinate:</source>
+					<trans-unit id="key">
+						<source>Key</source>
 					</trans-unit>
-					<trans-unit id="y_coordinate">
-						<source>y coordinate:</source>
+					<trans-unit id="filename">
+						<source>Filename</source>
 					</trans-unit>
-					<trans-unit id="dot">
-						<source>Dot</source>
+					<trans-unit id="position">
+						<source>Position</source>
 					</trans-unit>
-					<trans-unit id="move">
-						<source>Move</source>
+					<trans-unit id="radius">
+						<source>Radius</source>
 					</trans-unit>
+					<group id="status">
+						<trans-unit id="error">
+							<source>Error</source>
+						</trans-unit>
+						<trans-unit id="warning">
+							<source>Warning</source>
+						</trans-unit>
+						<trans-unit id="info">
+							<source>Information</source>
+						</trans-unit>
+						<trans-unit id="clear">
+							<source>Clear</source>
+						</trans-unit>
+						<trans-unit id="level">
+							<source>Level</source>
+						</trans-unit>
+						<trans-unit id="description">
+							<source>Description</source>
+						</trans-unit>
+					</group>
+					<group id="open_setting">
+						<trans-unit id="name">
+							<source>Option:'Open'</source>
+						</trans-unit>
+						<group id="priority_format">
+							<trans-unit id="name">
+								<source>Fileformat Priority</source>
+							</trans-unit>
+							<trans-unit id="cfg">
+								<source>CFG format</source>
+							</trans-unit>
+							<trans-unit id="xml">
+								<source>XML format</source>
+							</trans-unit>
+						</group>
+					</group>
+					<group id="save_setting">
+						<trans-unit id="name">
+							<source>Option:'Save'</source>
+						</trans-unit>
+						<group id="format">
+							<trans-unit id="name">
+								<source>Fileformat type</source>
+							</trans-unit>
+							<trans-unit id="cfg">
+								<source>CFG format</source>
+							</trans-unit>
+							<trans-unit id="xml">
+								<source>XML format</source>
+							</trans-unit>
+						</group>
+					</group>
+					<group id="entry_edit">
+						<trans-unit id="name">
+							<source>Edit entry</source>
+						</trans-unit>
+						<group id="section">
+							<trans-unit id="name">
+								<source>Section Select</source>
+							</trans-unit>
+						</group>
+						<group id="key">
+							<trans-unit id="name">
+								<source>Key type select</source>
+							</trans-unit>
+						</group>
+						<group id="value">
+							<trans-unit id="name">
+								<source>Iput Value</source>
+							</trans-unit>
+							<trans-unit id="filename">
+								<source>Filename:</source>
+							</trans-unit>
+							<trans-unit id="open">
+								<source>Open...</source>
+							</trans-unit>
+							<trans-unit id="radius">
+								<source>Radius:</source>
+							</trans-unit>
+							<trans-unit id="position">
+								<source>Position setting</source>
+							</trans-unit>
+							<group id="position">
+								<trans-unit id="name">
+									<source>Position</source>
+								</trans-unit>
+								<trans-unit id="x">
+									<source>x coordinate:</source>
+								</trans-unit>
+								<trans-unit id="y">
+									<source>y coordinate:</source>
+								</trans-unit>
+								<trans-unit id="z">
+									<source>z coordinate:</source>
+								</trans-unit>
+							</group>
+						</group>
+						<trans-unit id="add">
+							<source>Add</source>
+						</trans-unit>
+						<trans-unit id="remove">
+							<source>Remove</source>
+						</trans-unit>
+						<trans-unit id="apply">
+							<source>Apply</source>
+						</trans-unit>
+					</group>
 				</group>
-				<group id="play_setting">
-					<trans-unit id="play_setting">
-						<source>Playback setting</source>
+				<group id="motor_sound">
+					<trans-unit id="name">
+						<source>Motor sound editor</source>
 					</trans-unit>
-					<trans-unit id="source">
-						<source>Sound source setting</source>
-					</trans-unit>
-					<trans-unit id="source_run">
-						<source>Running sound:</source>
-					</trans-unit>
-					<trans-unit id="source_track">
-						<source>Track</source>
-					</trans-unit>
-					<trans-unit id="area">
-						<source>Area setting</source>
-					</trans-unit>
-					<trans-unit id="area_loop">
-						<source>Loop playback</source>
-					</trans-unit>
-					<trans-unit id="area_constant">
-						<source>Constant speed</source>
-					</trans-unit>
-					<trans-unit id="area_acceleration">
-						<source>Acceleration:</source>
-					</trans-unit>
-					<trans-unit id="area_swap">
-						<source>Swap</source>
-					</trans-unit>
-					<trans-unit id="play">
-						<source>Playback</source>
-					</trans-unit>
-					<trans-unit id="pause">
-						<source>Pause</source>
-					</trans-unit>
-					<trans-unit id="stop">
-						<source>Stop</source>
-					</trans-unit>
-				</group>
-				<group id="status_type">
-					<trans-unit id="status_type">
-						<source>Type:</source>
-					</trans-unit>
-					<trans-unit id="power">
-						<source>Power</source>
-					</trans-unit>
-					<trans-unit id="brake">
-						<source>Brake</source>
-					</trans-unit>
-				</group>
-				<group id="status_track">
-					<trans-unit id="status_track">
-						<source>Track:</source>
-					</trans-unit>
-				</group>
-				<group id="status_mode">
-					<trans-unit id="status_mode">
-						<source>Mode:</source>
-					</trans-unit>
-					<trans-unit id="pitch">
-						<source>Pitch</source>
-					</trans-unit>
-					<trans-unit id="volume">
-						<source>Volume</source>
-					</trans-unit>
-					<trans-unit id="sound_index">
-						<source>Sound source index</source>
-					</trans-unit>
-				</group>
-				<group id="status_tool">
-					<trans-unit id="status_tool">
-						<source>Tool:</source>
-					</trans-unit>
-					<trans-unit id="select">
-						<source>Select</source>
-					</trans-unit>
-					<trans-unit id="move">
-						<source>Move</source>
-					</trans-unit>
-					<trans-unit id="dot">
-						<source>Dot</source>
-					</trans-unit>
-					<trans-unit id="line">
-						<source>Line</source>
-					</trans-unit>
-				</group>
-				<group id="status_xy">
-					<trans-unit id="velocity">
-						<source>Velocity:</source>
-					</trans-unit>
-					<trans-unit id="pitch">
-						<source>Pitch:</source>
-					</trans-unit>
-					<trans-unit id="volume">
-						<source>Volume:</source>
-					</trans-unit>
-				</group>
-				<group id="vertex_info">
-					<trans-unit id="vertex_info">
-						<source>Vertex information</source>
-					</trans-unit>
-					<trans-unit id="velocity">
-						<source>Velocity:</source>
-					</trans-unit>
-					<trans-unit id="pitch">
-						<source>Pitch:</source>
-					</trans-unit>
-					<trans-unit id="volume">
-						<source>Volume:</source>
-					</trans-unit>
-					<trans-unit id="sound_index">
-						<source>Sound source index:</source>
-					</trans-unit>
+					<group id="view_setting">
+						<trans-unit id="name">
+							<source>View setting</source>
+						</trans-unit>
+						<trans-unit id="min_velocity">
+							<source>x-min(Velocity):</source>
+						</trans-unit>
+						<trans-unit id="max_velocity">
+							<source>x-max(Velocity):</source>
+						</trans-unit>
+						<trans-unit id="min_pitch">
+							<source>y-min(Pitch):</source>
+						</trans-unit>
+						<trans-unit id="max_pitch">
+							<source>y-max(Pitch):</source>
+						</trans-unit>
+						<trans-unit id="min_volume">
+							<source>y-min(Volume):</source>
+						</trans-unit>
+						<trans-unit id="max_volume">
+							<source>y-max(Volume):</source>
+						</trans-unit>
+						<trans-unit id="zoom_in">
+							<source>Zoom In</source>
+						</trans-unit>
+						<trans-unit id="zoom_out">
+							<source>Zoom Out</source>
+						</trans-unit>
+						<trans-unit id="reset">
+							<source>Reset</source>
+						</trans-unit>
+					</group>
+					<group id="direct_input">
+						<trans-unit id="name">
+							<source>Direct input</source>
+						</trans-unit>
+						<trans-unit id="x">
+							<source>x coordinate:</source>
+						</trans-unit>
+						<trans-unit id="y">
+							<source>y coordinate:</source>
+						</trans-unit>
+						<trans-unit id="dot">
+							<source>Dot</source>
+						</trans-unit>
+						<trans-unit id="move">
+							<source>Move</source>
+						</trans-unit>
+					</group>
+					<group id="play_setting">
+						<trans-unit id="name">
+							<source>Playback setting</source>
+						</trans-unit>
+						<group id="source">
+							<trans-unit id="name">
+								<source>Sound source setting</source>
+							</trans-unit>
+							<trans-unit id="run">
+								<source>Running sound:</source>
+							</trans-unit>
+							<trans-unit id="track">
+								<source>Track</source>
+							</trans-unit>
+						</group>
+						<group id="area">
+							<trans-unit id="name">
+								<source>Area setting</source>
+							</trans-unit>
+							<trans-unit id="loop">
+								<source>Loop playback</source>
+							</trans-unit>
+							<trans-unit id="constant">
+								<source>Constant speed</source>
+							</trans-unit>
+							<trans-unit id="acceleration">
+								<source>Acceleration:</source>
+							</trans-unit>
+							<trans-unit id="swap">
+								<source>Swap</source>
+							</trans-unit>
+						</group>
+						<trans-unit id="play">
+							<source>Playback</source>
+						</trans-unit>
+						<trans-unit id="pause">
+							<source>Pause</source>
+						</trans-unit>
+						<trans-unit id="stop">
+							<source>Stop</source>
+						</trans-unit>
+					</group>
+					<group id="status">
+						<group id="type">
+							<trans-unit id="name">
+								<source>Type:</source>
+							</trans-unit>
+							<trans-unit id="power">
+								<source>Power</source>
+							</trans-unit>
+							<trans-unit id="brake">
+								<source>Brake</source>
+							</trans-unit>
+						</group>
+						<group id="track">
+							<trans-unit id="name">
+								<source>Track:</source>
+							</trans-unit>
+						</group>
+						<group id="mode">
+							<trans-unit id="name">
+								<source>Mode:</source>
+							</trans-unit>
+							<trans-unit id="pitch">
+								<source>Pitch</source>
+							</trans-unit>
+							<trans-unit id="volume">
+								<source>Volume</source>
+							</trans-unit>
+							<trans-unit id="sound_index">
+								<source>Sound source index</source>
+							</trans-unit>
+						</group>
+						<group id="tool">
+							<trans-unit id="name">
+								<source>Tool:</source>
+							</trans-unit>
+							<trans-unit id="select">
+								<source>Select</source>
+							</trans-unit>
+							<trans-unit id="move">
+								<source>Move</source>
+							</trans-unit>
+							<trans-unit id="dot">
+								<source>Dot</source>
+							</trans-unit>
+							<trans-unit id="line">
+								<source>Line</source>
+							</trans-unit>
+						</group>
+						<group id="xy">
+							<trans-unit id="velocity">
+								<source>Velocity:</source>
+							</trans-unit>
+							<trans-unit id="pitch">
+								<source>Pitch:</source>
+							</trans-unit>
+							<trans-unit id="volume">
+								<source>Volume:</source>
+							</trans-unit>
+						</group>
+					</group>
+					<group id="vertex_info">
+						<trans-unit id="name">
+							<source>Vertex information</source>
+						</trans-unit>
+						<trans-unit id="velocity">
+							<source>Velocity:</source>
+						</trans-unit>
+						<trans-unit id="pitch">
+							<source>Pitch:</source>
+						</trans-unit>
+						<trans-unit id="volume">
+							<source>Volume:</source>
+						</trans-unit>
+						<trans-unit id="sound_index">
+							<source>Sound source index:</source>
+						</trans-unit>
+					</group>
 				</group>
 				<group id="message">
 					<trans-unit id="new">
@@ -3161,6 +3301,18 @@
 					</trans-unit>
 					<trans-unit id="exit">
 						<source>Do you want to save the current file before closing?</source>
+					</trans-unit>
+					<trans-unit id="cfg_save">
+						<source>If you save as CFG format, unsupported items will be lost. Are you sure to save?</source>
+					</trans-unit>
+					<trans-unit id="empty_filename">
+						<source>File name has not been entered.</source>
+					</trans-unit>
+					<trans-unit id="key_exist">
+						<source>The specified key is already set.</source>
+					</trans-unit>
+					<trans-unit id="not_yet_saved">
+						<source>Please save to create a relative path.</source>
 					</trans-unit>
 					<trans-unit id="vertex_exist">
 						<source>A point already exists at the same x coordinate, do you want to overwrite it?</source>
